Revision history for GitInsight

{{$NEXT}}
        - Initial release